--- a/sass/components/_social-networks.scss
+++ b/sass/components/_social-networks.scss
@@ -26,7 +26,9 @@
 }
 }
 .nets-list {
-
+    @media screen and (min-width:767px) {
+        display: none;
+    }
     display: flex;
     flex-wrap: wrap;
     align-items: center;
