--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -15,6 +15,9 @@
         max-width: 450px;
         overflow: scroll;
     }
+    @media screen and (min-width:1200px) {
+        max-width: 530px;
+    }
 
     &-list {
     padding-top: 75px;
