--- a/sass/main.css
+++ b/sass/main.css
@@ -1306,6 +1306,11 @@ textarea {
     overflow: scroll;
   }
 }
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 530px;
+  }
+}
 .modal-list {
   padding-top: 75px;
 }
