--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -1,7 +1,10 @@
 .benefits {
         padding-bottom: 60px;
         padding-top: 60px;
-
+    @media screen and (min-width:1200px) {
+        padding-top: 94px;;
+        padding-bottom: 0;
+    }
     &__list {
     display: block;
     padding: 0;
