--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+    
     max-width: 1600px;
     height: 600px;
     margin-left: auto;
@@ -10,6 +11,10 @@
     background-color: $order-background-color;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),url(../images/Img-2-2.jpg);
     background-size: center;
+    @media screen and (max-width:480px) {
+        padding-top: 118px;
+        padding-bottom: 118px;
+    }
 
 
     &__title {
@@ -23,6 +28,16 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: $white-color;
+    
+    @media screen and (min-width:1200px){
+        font-weight: 900;
+        font-size: 44px;
+        line-height: 60px;
+
+        text-align: center;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
 }
     &__button {
     padding-top: 8px 8px;
