--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -10,7 +10,7 @@
 .portfolio-filter {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 
     @media screen and (min-width: 768px) {
         margin-left: 92px;
@@ -100,6 +100,7 @@
 }
     }
     &__item:not(:last-child) {
+        margin-top: 0;
     margin-bottom: 30px;
 }
     &__item:hover &__overlay,
