--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -25,6 +25,12 @@
     @media screen and (min-width:1200px) {
         font-size: 36px;
     }
+    @media screen and (min-width:768px) {
+        margin-bottom: 30px;
+    }
+    @media screen and (min-width:1200px) {
+        margin-bottom: 50px;
+    }
 }
     &__list {
     display: block;
@@ -53,6 +59,9 @@
             margin-top: 50px;
             margin-right: 30px;
         }          
+    }
+    @media screen and (max-width: 480px){
+        margin-top: 30px;;
     }
 }
     &__name {
