--- a/sass/main.css
+++ b/sass/main.css
@@ -446,7 +446,12 @@ textarea {
 .site-nav__link {
   display: block;
   position: relative;
-  line-height: 47px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
   text-align: center;
   letter-spacing: 0.02em;
   text-decoration: none;
@@ -454,17 +459,27 @@ textarea {
   color: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
   .site-nav__link {
     font-size: 40px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .site-nav__link {
     position: relative;
     font-size: 14px;
     line-height: 1.142;
     padding: 32px 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .site-nav__link {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
   }
 }
 .site-nav__link:hover .site-nav__link:focus {
@@ -478,17 +493,22 @@ textarea {
 .site-nav__link--active {
   display: block;
   position: relative;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
   letter-spacing: 0.02em;
   color: #2196f3;
   text-decoration: none;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
   .site-nav__link--active {
     font-size: 40px;
     line-height: 47px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .site-nav__link--active {
     font-size: 14px;
   }
@@ -510,7 +530,7 @@ textarea {
 }
 @media screen and (min-width: 768px) {
   .site-nav__link--active::after {
-    bottom: -18px;
+    bottom: -25px;
   }
 }
 .site-nav__item:not(:nth-child(3n)) {
@@ -603,6 +623,12 @@ textarea {
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img-2-2.jpg);
   background-size: center;
 }
+@media screen and (max-width: 480px) {
+  .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
 .hero__title {
   padding-bottom: 0 40px;
   margin: 0 auto;
@@ -613,6 +639,16 @@ textarea {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
 }
 .hero__button {
   padding-top: 8px 8px;
@@ -634,6 +670,12 @@ textarea {
 .benefits {
   padding-bottom: 60px;
   padding-top: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .benefits {
+    padding-top: 94px;
+    padding-bottom: 0;
+  }
 }
 .benefits__list {
   display: block;
@@ -772,6 +814,16 @@ textarea {
     font-size: 36px;
   }
 }
+@media screen and (min-width: 768px) {
+  .team__title {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+  }
+}
 .team__list {
   display: block;
 }
@@ -805,6 +857,11 @@ textarea {
   .team__item {
     margin-top: 50px;
     margin-right: 30px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .team__item {
+    margin-top: 30px;
   }
 }
 .team__name {
@@ -1157,7 +1214,7 @@ textarea {
 .portfolio-filter {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .portfolio-filter {
@@ -1244,6 +1301,7 @@ textarea {
   }
 }
 .portfolio-gallery__item:not(:last-child) {
+  margin-top: 0;
   margin-bottom: 30px;
 }
 .portfolio-gallery__item:hover .portfolio-gallery__overlay, .portfolio-gallery__item:focus .portfolio-gallery__overlay {
